Add custom font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DummyJSON</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body class="font-['Inter']">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
