Add general styles

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>DummyJSON</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body class="font-['Inter']">
-    <div id="root"></div>
+  <body class="bg-light text-dark dark:bg-dark dark:text-light">
+    <div id="root" class="mx-auto max-w-screen-md"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
