Style everything with Tailwind

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body class="bg-light text-dark dark:bg-dark dark:text-light">
-    <div id="root" class="mx-auto max-w-screen-md"></div>
+    <div id="root" class="mx-auto max-w-[50rem]"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
